[gd_scene load_steps=8 format=3 uid="uid://dtah6764cxetq"]

[ext_resource type="Script" path="res://traps/bear_trap/bear_trap.gd" id="1_jdxv2"]
[ext_resource type="Material" uid="uid://c6t4wxrwaks6g" path="res://traps/placement_guide_mat.tres" id="2_110ge"]
[ext_resource type="Script" path="res://interaction_handler/interaction_handler.gd" id="2_db6nd"]
[ext_resource type="Script" path="res://interaction_handler/interaction_area.gd" id="2_vc3lw"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_810gw"]
height = 0.4
radius = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_phlk1"]
size = Vector3(0.5, 0.1, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_87ycs"]
size = Vector3(0.5, 0.1, 0.5)

[node name="BearTrap" type="Node3D" node_paths=PackedStringArray("trigger_area", "placement_guide", "place_area", "model")]
script = ExtResource("1_jdxv2")
trigger_area = NodePath("TriggerArea")
placement_guide = NodePath("Guide")
place_area = NodePath("PlaceArea")
model = NodePath("Model")
valid_surface = 1

[node name="TriggerArea" type="Area3D" parent="."]
script = ExtResource("2_vc3lw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
shape = SubResource("CylinderShape3D_810gw")

[node name="InteractionHandler" type="Node" parent="TriggerArea"]
script = ExtResource("2_db6nd")
interaction_msg = "reset"

[node name="Model" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_phlk1")

[node name="Guide" type="MeshInstance3D" parent="."]
material_override = ExtResource("2_110ge")
mesh = SubResource("BoxMesh_phlk1")

[node name="PlaceArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlaceArea"]
shape = SubResource("BoxShape3D_87ycs")

[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="interaction_end" from="TriggerArea/InteractionHandler" to="." method="_on_interaction_handler_interaction_end"]
